[gd_scene load_steps=2 format=3 uid="uid://unit_nameplate_scene"]

[ext_resource type="Script" path="res://scripts/UI/unit_nameplate.gd" id="1_nameplate"]

[node name="UnitNameplate" type="Control"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 50.0
mouse_filter = 2
script = ExtResource("1_nameplate")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Unit Name"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = ""
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 6)
layout_mode = 2
size_flags_horizontal = 4
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StatusContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1
